[project]
name = "coverage-badge"
version = "0.1.0"
description = ""
authors = [
    {name = "Cam Edwards",email = "cameron.e@sabermine.ai"}
]
package-mode=false
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "coverage (>=7.8.2,<8.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov . -v --cov-report=json"

[tool.coverage.run]
omit = [
   "*/tests/*",
   "*/tests*",
   "*__init__*",
   "*/v1/scripts/*",
   "*/stacks/*"
]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
show_missing = true
include = ["project/*"]
omit = [
   "*/tests/*",
   "*/tests*",
   "*__init__*",
   "*/v1/scripts/*",
   "*/stacks/*"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
